[tool.poetry]
name = "test_pywebio"
version = "0.1.0"
description = ""
authors = ["zexxonn <zexxonn@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pywebio = "^1.3.3"
fastapi = "^0.68.1"
uvicorn = "^0.15.0"
coloredlogs = "^15.0.1"
aiofiles = "^0.7.0"
websockets = "^10.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
